[gd_scene format=3 uid="uid://d3lj7jobevsbl"]

[ext_resource type="Script" uid="uid://i7fkblag2e5a" path="res://scripts/main.gd" id="1"]

[node name="Main" type="Control" unique_id=757873159]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BackgroundFill" type="ColorRect" parent="." unique_id=126359748]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="TextureRect" parent="." unique_id=370344877]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="UI" type="Control" parent="." unique_id=1690780104]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SafeArea" type="MarginContainer" parent="UI" unique_id=606391377]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Root" type="VBoxContainer" parent="UI/SafeArea" unique_id=2144122367]
layout_mode = 2
theme_override_constants/separation = 18

[node name="Top" type="VBoxContainer" parent="UI/SafeArea/Root" unique_id=620262978]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="UI/SafeArea/Root/Top" unique_id=1325138435]
layout_mode = 2
text = "Liga-Liga"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Instructions" type="Label" parent="UI/SafeArea/Root/Top" unique_id=436715242]
layout_mode = 2
text = "Clique em uma opção da esquerda e depois em uma da direita para formar o par correto."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Progress" type="Label" parent="UI/SafeArea/Root/Top" unique_id=67174773]
layout_mode = 2
text = "PARES: 0 / 0"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Center" type="HBoxContainer" parent="UI/SafeArea/Root" unique_id=462677829]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 70
alignment = 1

[node name="LeftColumn" type="VBoxContainer" parent="UI/SafeArea/Root/Center" unique_id=1278795552]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 18

[node name="RightColumn" type="VBoxContainer" parent="UI/SafeArea/Root/Center" unique_id=1202634108]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 18

[node name="Bottom" type="HBoxContainer" parent="UI/SafeArea/Root" unique_id=147836458]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="RestartButton" type="Button" parent="UI/SafeArea/Root/Bottom" unique_id=1979006188]
visible = false
layout_mode = 2
text = "RECOMEÇAR"
